# luaROFF

./: .gitignore  CMakeLists.txt  README.md
contrib/: lroff.sublime-syntax  lroff.vim
docs/: VADE_MECUM.md  pplua.1
examples/: bestiary.lroff  config-guide.roff  exam.lroff  finance.lroff  phrasebook.roff  release-notes.roff
include/: output_buffer.hpp
scripts/: build-examples.sh  roff.vim
src/: lroff.cpp  lroff.hpp  main.hpp  output_buffer.cpp  pplua.cpp  pplua.hpp
